cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/forward_class_decl.cpp
class unresolved_fwd;
class resolved_fwd;
class resolved_fwd {
};
